# pygsim

./: .bumpversion.cfg  .coveragerc  .editorconfig  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  test.py
examples/: align.py  container.py  mall_checkout.py
pysg/: core.py  util.py
pysg/core/: __init__.py  environment.py  objects.py
pysg/drawing/: __init__.py  color.py  container.py  drawable.py  shape.py  text.py
src/pygsim/: version.py
src/pysg/: core.py
src/pysg/drawing/: container.py
