[metadata]
name = pysg
version = 0.0.1
description = Graphical interface for SimPY with PyGame
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/honzad/pysg
author = Jan Ďurďák
author_email = jandurdak@seznam.cz
license = MIT
license_file = LICENSE
keywords = python simulation visualizer
project_urls =
  Documentation = https://github.com/honzad/pysg/wiki
  Source = https://github.com/honzad/pysg
  Tracker = https://github.com/honzad/pysg/issues
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  Intended Audience :: Education
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Simulation
  Programming Language :: Python :: 3
  Operating System :: Unix
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

[bdist_wheel]
universal = 1

[options]
setup_requires =
  simpy
  pygame
package_dir =
  = pysg
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
  click>=6.0

[options.packages.find]
where = pysg

[build_sphinx]
project = libname
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 1
